fixed some warnings that actually make sense